--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[models.User])
+@(form: Form[models.User], user: models.User)
 @*@(identity:securesocial.core.Identity)*@
 @base("Setting") {
 @*Navbar*@
@@ -105,7 +105,7 @@
     </div>
 }
         </div>
-    @address(form)
+    @address(user)
 </div>
 </div>
 </div>
