--- a/app/views/book/listBook.scala.html
+++ b/app/views/book/listBook.scala.html
@@ -19,7 +19,7 @@
             </thead>
             <tbody>
             @for(book <- books){
-                <tr ng-click="editBook($event)" href="@routes.BookStore.updateBook(book.getName())">
+                <tr ng-click="editBook($event)" href="@routes.BookStore.updateBook(book.getId())">
                     <td>@book.getName()</td>
                     <td>@book.getType()</td>
                     <td>@book.getDescription()</td>
