--- a/app/views/main/bookpanel.scala.html
+++ b/app/views/main/bookpanel.scala.html
@@ -1,10 +1,7 @@
 <div class="col-xs-12 col-sm-10 col-md-10 bs-book-container">
     <div class="col-sm-6 col-md-3" ng-repeat="product in products">
-        <a href="description/{{ product.name }}">
+        <a href="description/{{ product._id }}">
             <div class="thumbnail">
-
-
-
                 <img class="img-responsive" ng-src="getImage/{{product.imageName}}">
                 <div class="caption">
                     <h5 class="title">{{ product.name }}</h5>
@@ -13,9 +10,6 @@
                     <small>Paper back</small>
                     <small class="bs-price"><i class="glyphicon glyphicon-euro"></i>{{ product.price | number : 2 }}</small>
                 </div>
-
-
-
             </div>
         </a>
    </div>
