--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[models.User], user: models.User)
+@(form: Form[models.User])
 @*@(identity:securesocial.core.Identity)*@
 @base("Setting") {
 @*Navbar*@
@@ -38,7 +38,7 @@
             @flash.get("success")
         </p>
     }
-       @if(form("provider").value.equals("google")){
+       @*@if(form("provider").value.equals("google")){
        <div class="form-group">
            <label class="col-sm-2 control-label">Provider</label>
            <div class="col-sm-10">
@@ -61,7 +61,7 @@
                <img src="/assets/securesocial/images/providers/twitter.png"></img>
            </div>
        </div>
-       }
+       }*@
     <div class="form-group">
         <label class="col-sm-2 control-label">Firstname</label>
         <div class="col-sm-10">
@@ -105,7 +105,7 @@
     </div>
 }
         </div>
-    @address(user)
+    @address()
 </div>
 </div>
 </div>
