--- a/app/views/main/address.scala.html
+++ b/app/views/main/address.scala.html
@@ -41,32 +41,33 @@
                     <h4 class="modal-title" id="myModalLabel">Add a new address</h4>
                   </div>
                   <div class="modal-body">
-                      <form class="form-horizontal" action="" method="POST" ng-init="loadAddresses()">
+                      <form name="addressForm" class="form-horizontal" action="" method="POST" ng-init="loadAddresses()">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Street</label>
                             <div class="col-sm-7">
-                                <input name='street' class="form-control" type="text"  placeholder="Street" ng-model="editAddress.street" value=''>
+                                <input name='street' class="form-control" type="text"  placeholder="Street" ng-model="editAddress.street" value='' required>
                             </div>
                         </div>         
                         <div class="form-group" >
                             <label class="col-sm-2 control-label">City</label>
                             <div class="col-sm-7">
-                                <input name="city" class="form-control" type="text"  placeholder="City" ng-model="editAddress.city" value=''>
+                                <input name="city" class="form-control" type="text"  placeholder="City" ng-model="editAddress.city" value='' required>
                             </div>
                         </div>            
                         <div class="form-group" >
                             <label class="col-sm-2 control-label">Country</label>
                             <div class="col-sm-7">
-                                <input name="country" class="form-control" type="text"  placeholder="Country" ng-model="editAddress.country" value=''>
+                                <input name="country" class="form-control" type="text"  placeholder="Country" ng-model="editAddress.country" value='' required>
                             </div>
                         </div>            
                         <div class="form-group" >
                             <label class="col-sm-2 control-label">Zipcode</label>
                             <div class="col-sm-7">
-                                <input name="zipcode" class="form-control" type="text"  placeholder="Zip code, 6 digits" ng-model="editAddress.zipcode" value=''>
+                                <input name="zipcode" class="form-control" type="text"  placeholder="Zip code, 5 digits" ng-model="editAddress.zipcode" value='' required ng-pattern="/^[0-9]{5}$/">
                             </div>
-                        </div>   
-                    </form>
+                            <span class="col-sm-3" ng-show="addressForm.zipcode.$error.pattern"><i class="fa fa-times" style="color:red"> Only 5 digits accepted</i></span>
+                        </div>
+                      </form>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
