--- a/app/views/book/upsertBook.scala.html
+++ b/app/views/book/upsertBook.scala.html
@@ -3,7 +3,11 @@
 @layout{
     <h2>Add/Edit/Delete the Book</h2>
     <hr>
-    <form class="form-horizontal" role="form" action="@routes.BookStore.handleUpdateBook()" method="POST">
+    @if(bookForm("name").value == null){
+        <form class="form-horizontal" role="form" action="@routes.BookStore.handleAddBook()" method="POST" enctype="multipart/form-data">
+    } else{
+        <form class="form-horizontal" role="form" action="@routes.BookStore.handleUpdateBook()" method="POST" enctype="multipart/form-data">
+    }
         <div class="form-group">
             <label class="col-sm-2 control-label">Book name</label>
             <div class="col-sm-10">
@@ -64,12 +68,12 @@
                 <input type="number" name="numPage" class="form-control" placeholder="Page number" value='@bookForm("numPage").value'>
             </div>
         </div>
-        <input type="hidden" name="id" value='@bookForm("id").value'>
         <div class="form-group">
             <div class="col-sm-offset-2" style="display:inline-block; padding-left: 15px;">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
             @if(bookForm("name").value != null){
+                <input type="hidden" name="id" value='@bookForm("id").value'>
                 <a class="btn btn-danger" href='@routes.BookStore.deleteBook(bookForm("id").value)'>Delete</a>
             }
         </div>
