--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -98,6 +98,7 @@
             <input type="text" name="phoneno" class="form-control" placeholder="Phone number" value="@form("phoneno").value">
         </div>
     </div>
+    <input name="id" type="hidden" value='@form("id").value'>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary">  Save  </button>
