[Add] Comment class/ Comment GUI and bind the fields with AngularJS

--- a/app/views/main/description.scala.html
+++ b/app/views/main/description.scala.html
@@ -44,7 +44,7 @@
                 @product.getDescription()
             </detail>
             <hr>
-            <div class="col-xs-12 col-sm-6 col-md-6 bs-detail-char">
+            <div class="col-xs-12 col-sm-6 col-md-6 bs-detail-char-right">
                 <h4>Paper back</h4>
                 <!--<h4>Normal price: <del><i class="glyphicon glyphicon-euro"></i> 50</del></h4>
                 <h4 style="color: red">Special price: <i class="glyphicon glyphicon-euro"></i> 30 (save 60%)</h4>-->
@@ -91,13 +91,9 @@
                 }</h3>
         </div>
     </div>
+    @review()
 </main>
-<!-- Javascripts -->
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="javascripts/jquery-1.11.0.min.js"></script>
-<script src="javascripts/bootstrap.min.js"></script>
-<script src="javascripts/bookstore.js"></script>
+
 } {
 @*Footer*@
 @footer()
