--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/jquery.fullPage.css")'>
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/font-awesome.min.css")'>
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/bootstrap-social.css")'>
+    <link rel="stylesheet" href='@routes.Assets.at("stylesheets/star-rating.min.css")'>
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/bookstore.css")'>
     <link rel="shortcut icon" type="image/png" href='@routes.Assets.at("images/favicon.png")'>
 
@@ -35,6 +36,7 @@
         <script src='@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))'></script>
         <script src='@routes.WebJarAssets.at(WebJarAssets.locate("angular.min.js"))'></script>
         <script src='@routes.Assets.at("javascripts/ng-infinite-scroll.min.js")'></script>
+        <script src='@routes.Assets.at("javascripts/star-rating.min.js")'></script>
         <script src='@routes.Assets.at("javascripts/bookstore.js")'></script>
         @javascript
     </body>
