--- a/app/views/main/review.scala.html
+++ b/app/views/main/review.scala.html
@@ -1,50 +1,56 @@
+@(product : Book)
+<!--Set data for angularJs-->
+<div id="productId" data-productId="@product.getId()" ng-init="loadComments()">
 <hr>
 <h2>Customer Reviews</h2>
 <div class="col-xs-12 col-sm-4 bs-detail-char-right bs-rating-wrapper">
-    <h4>Average rating 4.5</h4>
-    <div><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> (150)</div>
+    <h4>Average rating {{ rating.average }}</h4>
+    <div><i ng-repeat="i in getRating(rating.average) track by $index" class="fa fa-star"></i> ({{ rating.all }})</div>
     <div>
-        <div class="bs-rating-stars">5 star</div>
+        <div class="bs-rating-text">5 star</div>
         <div class="bs-rating-bar">
-            <div class="bs-rating-bar-measure"></div>
+            <div class="bs-rating-bar-measure" style="width: {{ rating.fivePc }}%"></div>
         </div>
-        <a href="#"> (100)</a>
+        <a href="#"> ({{ rating.five }})</a>
     </div>
     <div>
-        <div class="bs-rating-stars">4 star</div>
+        <div class="bs-rating-text">4 star</div>
         <div class="bs-rating-bar">
-            <div class="bs-rating-bar-measure"></div>
+            <div class="bs-rating-bar-measure" style="width: {{ rating.fourPc }}%"></div>
         </div>
-        <a href="#"> (30)</a>
+        <a href="#"> ({{ rating.four }})</a>
     </div>
     <div>
-        <div class="bs-rating-stars">3 star</div>
+        <div class="bs-rating-text">3 star</div>
         <div class="bs-rating-bar">
-            <div class="bs-rating-bar-measure"></div>
+            <div class="bs-rating-bar-measure" style="width: {{ rating.threePc }}%"></div>
         </div>
-        <a href="#"> (5)</a>
+        <a href="#"> ({{ rating.three }})</a>
     </div>
     <div>
-        <div class="bs-rating-stars">2 star</div>
+        <div class="bs-rating-text">2 star</div>
         <div class="bs-rating-bar">
-            <div class="bs-rating-bar-measure"></div>
+            <div class="bs-rating-bar-measure" style="width: {{ rating.twoPc }}%"></div>
         </div>
-        <a href="#">(10)</a>
+        <a href="#">({{ rating.two }})</a>
     </div>
     <div>
-        <div class="bs-rating-stars">1 star</div>
+        <div class="bs-rating-text">1 star</div>
         <div class="bs-rating-bar">
-            <div class="bs-rating-bar-measure"></div>
+            <div class="bs-rating-bar-measure" style="width: {{ rating.onePc }}%"></div>
         </div>
-        <a href="#"> (5)</a>
+        <a href="#"> ({{ rating.one }})</a>
     </div>
 </div>
 
 <div class="col-xs-12 col-sm-8 bs-review-wrapper">
     <form role="form">
         <div class="form-group">
+            <div class="alert alert-danger" ng-if="isLogin == false">
+                <strong>Warning!</strong> You must <a href="/login" class="alert-link">login</a> before adding a comment.
+            </div>
             <label>Rating: </label>
-            <input ng-model="reviewField.star" id="reviewStar" type="number" class="rating form-control" min=0 max=5 step=0.5 data-size="xs">
+            <input ng-model="reviewField.rating" id="reviewRating" type="number" class="rating form-control" min=0 max=5 step=1 data-size="xs">
         </div>
         <div class="form-group">
             <textarea ng-model="reviewField.description" class="form-control" placeholder="Let other people know what you think!" required=""></textarea>
@@ -57,13 +63,12 @@
         <div class="clearfix"></div>
         <hr>
         <div class="col-xs-12 col-sm-2">
-            <h5>{{ review.name }} LVarayut</h5>
-            <p>{{ review.date}} Posted January 20, 2012</p>
+            <h5>{{ review.user }}</h5>
+            <p>Posted {{ review.publicationDate | date : 'd MMMM, yyyy'}}</p>
         </div>
         <div class="col-xs-12 col-sm-10 bs-detail-char-left">
-            <span> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> I like it</span>
+            <span> <i ng-repeat="i in getRating(review.rating) track by $index" class="fa fa-star bs-rating-star"></i><strong style="font-size: 1.1em;"> {{ review.title }}</strong></span>
             <p>{{ review.description }}</p>
-            <p>This book is not only for the young set. There is great benefit to all who read this. It’s not only about two teens battling cancer; it’s about a lesson to all of us to live our lives every day, every minute. We should be thankful for this time especially if we are lucky enough to find love and be capable of giving. This story is beautiful, funny, heartbreaking and poignant. Gus and Hazel made me laugh, cry, laugh all over again, and cry yet again. I’m still crying!</p>
         </div>
     </div>
 </div>
