[Modify] Comment system, bug fixed

--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     </head>
-    <body ng-controller="BookStoreController" infinite-scroll="loadBooks()">
+    <body ng-controller="BookStoreController">
         @navbarMenu
         @content
         <footer>
