--- a/app/views/main/bookpanel.scala.html
+++ b/app/views/main/bookpanel.scala.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-10 col-md-10 bs-book-container">
+<div class="col-xs-12 col-sm-10 col-md-10 bs-book-container" infinite-scroll="loadBooks()">
     <div class="col-sm-6 col-md-3" ng-repeat="product in products">
         <a href="description/{{ product._id }}">
             <div class="thumbnail">
