--- a/app/views/introduction/signInButton.scala.html
+++ b/app/views/introduction/signInButton.scala.html
@@ -1,29 +1,30 @@
-<ul class="nav pull-right bs-intro-navbar-head-btn navbar-text">
-    <li class="dropdown">
-        <a class="dropdown-toggle btn btn-md btn-success bs-intro-navbar-head-btn" data-toggle="dropdown" href="#" role="button" style="background-color: #47a447; padding: 6px 12px;">Sign in</a>
-            <div class="dropdown-menu dropdown-menu-right" style="padding:17px;">
-                <h4>Sign in</h4>
-                <form class="form" style="width: 200px;" action="@securesocial.controllers.routes.LoginPage.login()">
-                    <div class="bs-left-inner-addon ">
-                        <i class="glyphicon glyphicon-envelope"></i><input type="email" name="email" class="form-control" placeholder="Email" required="" disabled>
-                    </div>
-                    <div class="bs-left-inner-addon ">
-                        <i class="glyphicon glyphicon-lock"></i><input type="password" name="password" class="form-control" placeholder="Password" required="" disabled>
-                    </div>
-                    <label class="checkbox" style="font-weight:normal;">
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                    <button class="btn btn-md btn-success btn-block" type="submit" style="margin-top: 5px;">Sign in</button>
-                </form>
-                <div style="text-align: center;">
-                <h5 style="display: inline-block">Or sign in with  </h5>
-                    <a class="btn btn-social-icon btn-xs btn-google-plus" href="/authenticate/google"><i class="fa fa-google-plus"></i></a>
-                    <a class="btn btn-social-icon btn-xs btn-facebook" href="/authenticate/facebook"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-xs btn-twitter" href="/authenticate/twitter"><i class="fa fa-twitter"></i></a>
-                </div>
-                <div>
-                    <a class="pull-right" href="@securesocial.controllers.routes.Registration.startResetPassword()" style="color: #B3B3B3; font-size: 0.8em;">Forgot password?</a>
-                </div>
-            </div>
-    </li>
-</ul>
+<a class="btn btn-md btn-success nav pull-right bs-intro-navbar-head-btn navbar-text" href="/login" role="button" style="background-color: #47a447; padding: 6px 12px;">Sign in</a>
+<!--<ul class="nav pull-right bs-intro-navbar-head-btn navbar-text">-->
+    <!--<li class="dropdown">-->
+        <!--<a class="dropdown-toggle btn btn-md btn-success bs-intro-navbar-head-btn" data-toggle="dropdown" href="#" role="button" style="background-color: #47a447; padding: 6px 12px;">Sign in</a>-->
+            <!--<div class="dropdown-menu dropdown-menu-right" style="padding:17px;">-->
+                <!--<h4>Sign in</h4>-->
+                <!--<form class="form" style="width: 200px;" action="@securesocial.controllers.routes.LoginPage.login()">-->
+                    <!--<div class="bs-left-inner-addon ">-->
+                        <!--<i class="glyphicon glyphicon-envelope"></i><input type="email" name="email" class="form-control" placeholder="Email" required="" disabled>-->
+                    <!--</div>-->
+                    <!--<div class="bs-left-inner-addon ">-->
+                        <!--<i class="glyphicon glyphicon-lock"></i><input type="password" name="password" class="form-control" placeholder="Password" required="" disabled>-->
+                    <!--</div>-->
+                    <!--<label class="checkbox" style="font-weight:normal;">-->
+                        <!--<input type="checkbox" value="remember-me"> Remember me-->
+                    <!--</label>-->
+                    <!--<button class="btn btn-md btn-success btn-block" type="submit" style="margin-top: 5px;">Sign in</button>-->
+                <!--</form>-->
+                <!--<div style="text-align: center;">-->
+                <!--<h5 style="display: inline-block">Or sign in with  </h5>-->
+                    <!--<a class="btn btn-social-icon btn-xs btn-google-plus" href="/authenticate/google"><i class="fa fa-google-plus"></i></a>-->
+                    <!--<a class="btn btn-social-icon btn-xs btn-facebook" href="/authenticate/facebook"><i class="fa fa-facebook"></i></a>-->
+                    <!--<a class="btn btn-social-icon btn-xs btn-twitter" href="/authenticate/twitter"><i class="fa fa-twitter"></i></a>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<a class="pull-right" href="@securesocial.controllers.routes.Registration.startResetPassword()" style="color: #B3B3B3; font-size: 0.8em;">Forgot password?</a>-->
+                <!--</div>-->
+            <!--</div>-->
+    <!--</li>-->
+<!--</ul>-->
