--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -81,10 +81,10 @@
             </ul>
             <!-- Navbar Collapsed -->
             <ul class="nav navbar-nav navbar-right visible-xs visible-sm">
-                <li><a href="#"><i class="glyphicon glyphicon-bell"></i> Setting</a></li>
+                <li><a href="#"><i class="glyphicon glyphicon-bell"></i> Notification</a></li>
                 <li><a href="@routes.BookStore.setting()"><i class="fa fa-cog"></i> Setting</a></li>
                 <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
-                <li><a href="#"><i class="glyphicon glyphicon-shopping-cart"></i> Setting</a></li>
+                <li><a href="#"><i class="glyphicon glyphicon-shopping-cart"></i> Cart</a></li>
                 <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
                 <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
             </ul>
