[Modify] Add/Update/Delete account system

--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -20,7 +20,8 @@
 <div class="bs-docs-example">
    <ul id="myTab" class="nav nav-tabs">
        <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-       <li><a href="#addresses" data-toggle="tab">Adresses</a></li>
+       <li><a href="#addresses" data-toggle="tab">Addresses</a></li>
+       <li><a href="#accounts" data-toggle="tab">Accounts</a></li>
        <li><a href="#password" data-toggle="tab">Password</a></li>
    </ul>
    <div id="myTabContent" class="tab-content">
@@ -107,6 +108,7 @@
 }
         </div>
     @address()
+    @account()
 </div>
 </div>
 </div>
