[Add] Cart system  / OrderRepository [Modify] Order class / Initialize data in Global / Administrator

--- a/app/views/main/review.scala.html
+++ b/app/views/main/review.scala.html
@@ -1,6 +1,6 @@
 @(product : Book)
 <!--Set data for angularJs-->
-<div id="productId" data-productId="@product.getId()" ng-init="loadComments()">
+<div ng-init="loadComments()">
 <hr>
 <h2>Customer Reviews</h2>
 <div class="col-xs-12 col-sm-4 bs-detail-char-right bs-rating-wrapper">
