--- a/app/views/main/description.scala.html
+++ b/app/views/main/description.scala.html
@@ -37,6 +37,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-8">
+            <div id="productId" data-productId="@product.getId()"></div>
             <h3>@product.getName()</h3>
             <small>@product.getAuthor()</small>
             <div><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
@@ -49,7 +50,7 @@
                 <!--<h4>Normal price: <del><i class="glyphicon glyphicon-euro"></i> 50</del></h4>
                 <h4 style="color: red">Special price: <i class="glyphicon glyphicon-euro"></i> 30 (save 60%)</h4>-->
                 <h4>Price: <i class="glyphicon glyphicon-euro"></i> @product.getPrice()</h4>
-                <button class="btn btn-success">Add to cart</button>
+                <button class="btn btn-success" ng-click="addToCart()">Add to cart</button>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <p>Free shipping for exclusive membership <a href="#">details</a></p>
