--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -1,5 +1,5 @@
 @*@(identity:securesocial.core.Identity)*@
-<div class="navbar navbar-default" role="navigation">
+<div class="navbar navbar-default" role="navigation" ng-init="loadCart()">
     <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -58,13 +58,9 @@
                             <a class="" href="#"><i class="glyphicon glyphicon-cog"></i></a>
                         </div>
                         <div class="bs-navbar-wishlist-body">
-                            <a href="#">
-                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/play-for-java.png")">
-                                <span>Play framework for java</span>
-                            </a>
-                            <a href="#">
-                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/mongodb.png")">
-                                <span>MongoDB</span>
+                            <a href="#" ng-repeat="item in cart">
+                                <img align="left" width="50" height="50" ng-src="/getImage/{{ item.imageName }}">
+                                <span><b>{{ item.name }}</b> - {{ item.description | ellipsis }}</span>
                             </a>
                         </div>
                     </div>
