[Add] Payment system/ History system

--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -35,6 +35,7 @@
         <script src='@routes.Assets.at("javascripts/jquery-1.11.0.min.js")'></script>
         <script src='@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))'></script>
         <script src='@routes.WebJarAssets.at(WebJarAssets.locate("angular.min.js"))'></script>
+        <script src='@routes.WebJarAssets.at(WebJarAssets.locate("angular-sanitize.min.js"))'></script>
         <script src='@routes.Assets.at("javascripts/ng-infinite-scroll.min.js")'></script>
         <script src='@routes.Assets.at("javascripts/star-rating.min.js")'></script>
         <script src='@routes.Assets.at("javascripts/bookstore.js")'></script>
