--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -58,6 +58,7 @@
                             <a class="" href="@routes.BookStore.payment()"><i class="fa fa-credit-card"></i></a>
                         </div>
                         <div class="bs-navbar-wishlist-body">
+                            <p ng-if="!cart.length">No item in cart...</p>
                             <div  ng-repeat="item in cart">
                                 <a href="/description/{{ item._id }}">
                                     <img align="left" width="50" height="50" ng-src="/getImage/{{ item.imageName }}">
@@ -72,7 +73,7 @@
                     <ul class="dropdown-menu bs-navbar-dropdown-menu">
                         <li><a href="@routes.BookStore.setting()"><i class="fa fa-cog"></i> Setting</a></li>
                         <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
-                        <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
+                        <li><a href="@routes.BookStore.history()"><i class="fa fa-clock-o"></i> History</a></li>
                         <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
                     </ul>
                 </li>
@@ -83,7 +84,7 @@
                 <li><a href="@routes.BookStore.setting()"><i class="fa fa-cog"></i> Setting</a></li>
                 <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
                 <li><a href="#"><i class="glyphicon glyphicon-shopping-cart"></i> Cart</a></li>
-                <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
+                <li><a href="@routes.BookStore.history()"><i class="fa fa-clock-o"></i> History</a></li>
                 <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
             </ul>
         </div>
